realisation commit #7: jar compile settings was were added